# led-thing

./: .gitignore  .gitmodules
firmware/: .gitignore  avrdude-flip2-reset.patch  get-avrdude.sh
firmware/avrdude-udev-rules/: 99-avrdude-flip2.rules
firmware/xmega-app/: .gitignore  README.md  Shakefile.hs  get-asf.sh
firmware/xmega-app/conf/: conf_usb.h
firmware/xmega-app/src/: led-thing.proto  main.c  main.h  message.c  message.h  pins.h  sleep_lock.h  usb_task.c  usb_task.h
firmware/xmega-dfu/: README.md  xmega-dfu.hex
firmware/xmega-dfu-gcc/: README.md  Shakefile.hs
firmware/xmega-dfu-gcc/src/: main.c
firmware/xmega-dfu/avr/7.10.1/ASF/ATxmega/32a4u/dummy_board/small/: StartupScreen.ewsample  ewinfo.ENU.html  xmega_small.dep  xmega_small.ewd  xmega_small.ewp  xmega_small.eww
hardware/power-board/: Light Interface.sch  MOSFET selection notes.txt  Main Regulators.sch  Power Entry.sch  Supervisor regulator.sch  USB.sch  V_IN measurement.sch  power-board.bom  power-board.sch  power-board.xlsx  project.lib
hardware/power-board/gerbers/: power-board-B.SilkS.gbo  power-board-Dwgs.User.gbr  power-board-Edge.Cuts.gm1  power-board-F.Cu.gtl  power-board-F.Paste.gtp  power-board-NPTH.drl  power-board.drl
hardware/power-board/project.pretty/: TO-PMOD-11.kicad_mod
power-board/: Control Interface.sch  Current Sharing.sch  Extra IO.sch  Light Interface.sch  MCU.sch  Main Regulators.sch  Power Entry.sch  Supervisor regulator.sch  Temp measurement.sch  USB.sch  V_IN measurement.sch  fp-lib-table  power-board-cache.lib  power-board.bom  power-board.kicad_pcb  power-board.pro  power-board.sch  power-board.xlsx  project.lib
power-board/gerbers/: power-board-B.Cu.gbl  power-board-B.Mask.gbs  power-board-Dwgs.User.gbr  power-board-Edge.Cuts.gm1  power-board-F.Cu.gtl  power-board-F.Mask.gts  power-board-F.Paste.gtp  power-board-F.SilkS.gto  power-board-In1.Cu.g2  power-board-In2.Cu.g3  power-board-NPTH-drl_map.ps  power-board-NPTH.drl  power-board-drl_map.ps  power-board.drl
power-board/project.pretty/: Spark_Gap_8mil.kicad_mod
protocol/: led-thing.proto
software/haskell/led-thing/: led-thing.cabal
software/haskell/led-thing-protobuf/: led-thing-protobuf.cabal  protobuf.sh
software/haskell/led-thing-protobuf/src/Proto/: LedThing.hs
software/haskell/led-thing-protobuf/src/Proto/LedThing/: ChannelDriver.hs  ChannelFormat.hs  ChannelStructure.hs  CreateChannelRequest.hs  CreateChannelResponse.hs  DeleteChannelRequest.hs  DeleteChannelResponse.hs  HelloRequest.hs  HelloResponse.hs  ListChannelsRequest.hs  ListChannelsResponse.hs  ProtocolVersion.hs  ReadChannelRequest.hs  ReadChannelResponse.hs  ResultStatus.hs  WireMessage.hs  WriteChannelRequest.hs  WriteChannelResponse.hs
software/haskell/led-thing-protobuf/src/Proto/LedThing/WireMessage/: Message.hs
software/haskell/led-thing/src/: LedThing.hs
(+11 files in other folders)
