name:                   led-thing-protobuf
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               /dev/null

category:               Unclassified
synopsis:               Generated protobuf code for "LED thing" project
description:            Generated protobuf code for "LED thing" project

Library
  hs-source-dirs:       src
  exposed-modules:      Proto.LedThing,
                        Proto.LedThing.WriteChannelRequest,
                        Proto.LedThing.CreateChannelRequest,
                        Proto.LedThing.ReadChannelRequest,
                        Proto.LedThing.HelloResponse,
                        Proto.LedThing.ReadChannelResponse,
                        Proto.LedThing.DeleteChannelRequest,
                        Proto.LedThing.ChannelDriver,
                        Proto.LedThing.WriteChannelResponse,
                        Proto.LedThing.CreateChannelResponse,
                        Proto.LedThing.ChannelFormat,
                        Proto.LedThing.ChannelStructure,
                        Proto.LedThing.ResultStatus,
                        Proto.LedThing.ListChannelsResponse,
                        Proto.LedThing.DeleteChannelResponse,
                        Proto.LedThing.HelloRequest,
                        Proto.LedThing.ProtocolVersion,
                        Proto.LedThing.WireMessage,
                        Proto.LedThing.WireMessage.Message,
                        Proto.LedThing.ListChannelsRequest

  build-depends:        base >= 3,
                        protocol-buffers,
                        protocol-buffers-descriptor
