name:                   led-thing
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                MIT
homepage:               /dev/null

category:               Unclassified
synopsis:               API and CLI for LED thing project
description:            API and CLI for LED thing project

Library
  hs-source-dirs:       src
  ghc-options:          -fwarn-unused-imports
  exposed-modules:      LedThing
  build-depends:        base >= 3,
                        bytestring,
                        cobs,
                        containers,
                        led-thing-protobuf,
                        serial
